# mcp-crawl4ai-rag

./: .dockerignore  .env.example  .gitignore  CLAUDE.backup.md  CLAUDE.md  ONBOARDING.md  POSTGRESQL_MIGRATION.md  QUICKSTART.md  README.md  cli_chat.py  db_browser.py  mcp-inspector-config.json  mcp_tools_test_results.json  pyproject.toml  pytest.ini  run_mcp_stdio.sh  start_mcp_server.sh  test_enhanced_observability.py  test_logging.py  test_mcp_stdio.py  test_mcp_tools.py  test_simple_mcp.py
.claude/commands/: check.md  commit.md  doc-impl.md  phase.md  risk.md  test.md
.github/workflows/: sync-upstream.yml
PRPs/ai_docs/: development_standards.md  universal_test_regime_reference.md
src/: content_processing.py  crawl4ai_mcp.py  crawl_strategies.py  logging_config.py  mcp_crawl_tools.py  mcp_search_tools.py  mcp_server.py  observability.py  utils.py
src/content/: __init__.py  processor.py
src/database/: __init__.py  operations.py
src/embeddings/: __init__.py  generator.py
src/pydantic_agent/: __init__.py  agent.py  dependencies.py  outputs.py  tools.py  unified_agent.py
src/pydantic_agent/examples/: __init__.py  basic_crawl_example.py  enhanced_observability_example.py  logging_example.py  (+2 more)
src/search/: __init__.py  engine.py
tests/: __init__.py  conftest.py  test_logging.py  test_mcp_tools.py  test_unified_agent.py
tests/fixtures/: crawl_mocks.py  database.py  mock_data.py  openai_mocks.py
tests/unit/: test_content_processor.py  test_database_operations.py  test_embeddings_generator.py  test_mcp_tools.py  test_search_engine.py
